--- a/.gitignore
+++ b/.gitignore
@@ -187,3 +187,6 @@ $RECYCLE.BIN/
 # End of https://www.gitignore.io/api/osx,node,linux,windows,sublimetext,visualstudiocode
 
 package-lock.json
+
+assets/
+assets/*
