--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "homepage": "https://github.com/akadainovacao/treare.github.io#readme",
   "dependencies": {
     "bootstrap": "^4.1.3",
-    "jquery": "^3.3.1"
+    "jquery": "^3.3.1",
+    "material-icons": "^0.2.3"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
