--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "dependencies": {
     "bootstrap": "^4.1.3",
     "jquery": "^3.3.1",
-    "material-icons": "^0.2.3"
+    "material-icons": "^0.2.3",
+    "materialize-css": "^1.0.0-rc.2"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
