--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
   },
   "homepage": "https://github.com/akadainovacao/treare.github.io#readme",
   "dependencies": {
+    "animate-sass": "^0.8.2",
     "bootstrap": "^4.1.3",
     "jquery": "^3.3.1",
-    "material-icons": "^0.2.3",
+    "material-design-icons": "^3.0.1",
     "materialize-css": "^1.0.0-rc.2"
   },
   "devDependencies": {
