--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
   },
   "homepage": "https://github.com/akadainovacao/treare.github.io#readme",
   "dependencies": {
-    "animate-sass": "^0.8.2",
     "bootstrap": "^4.1.3",
     "jquery": "^3.3.1",
     "material-design-icons": "^3.0.1",
     "materialize-css": "^1.0.0-rc.2"
   },
   "devDependencies": {
+    "animatewithsassclass": "^3.2.1",
     "gulp": "^3.9.1",
     "gulp-clean-css": "^3.10.0",
     "gulp-compass": "^2.1.0",
